test_output_final.log
Build profile: -w ghc-9.14.1 -O1
In order, the following will be built (use -v for more details):
 - azimuth-0.1.0 (test:azimuth-test) (file test/AdvancedTelemetrySpec.hs changed)
Preprocessing test suite 'azimuth-test' for azimuth-0.1.0...
Building test suite 'azimuth-test' for azimuth-0.1.0...
[ 8 of 21] Compiling AdvancedTelemetrySpec ( test/AdvancedTelemetrySpec.hs, dist-newstyle/build/x86_64-linux/ghc-9.14.1/azimuth-0.1.0/t/azimuth-test/build/azimuth-test/azimuth-test-tmp/AdvancedTelemetrySpec.o ) [Source file changed]
test/AdvancedTelemetrySpec.hs:24:1: error: [GHC-61948]
    Could not find module ‘Data.Float’.
    Perhaps you meant Data.Format
    Use -v to see a list of the files searched for.
   |
24 | import Data.Float (isNaN, isInfinite)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

